--- a/gamelab2/index.html
+++ b/gamelab2/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/public/style.css" />
+		<link rel="stylesheet" href="./public/style.css" />
 		<title>Document</title>
 	</head>
 	<body>
 		<div id="app">
 			<div class="pokemonWrapper"></div>
 		</div>
-		<script type="module" src="/build/index.js"></script>
+		<script type="module" src="./build/index.js"></script>
 	</body>
 </html>
